{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1284,
  "lineage": "b118e24c-f6b0-7b83-772a-762436998940",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_elb",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:loadbalancer/test1-bastion",
            "availability_zones": [
              "eu-central-1a",
              "eu-central-1b",
              "eu-central-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "test1-bastion-1481124457.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:22",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "test1-bastion",
            "idle_timeout": 60,
            "instances": [
              "i-0ecbec9b5f1ff2965"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 22,
                "instance_protocol": "tcp",
                "lb_port": 22,
                "lb_protocol": "tcp"
              }
            ],
            "name": "test1-bastion",
            "security_groups": [
              "sg-0e1be07f9a122880d"
            ],
            "source_security_group": "686255952373/test1-bastion",
            "source_security_group_id": "sg-0e1be07f9a122880d",
            "subnets": [
              "subnet-052d1357f212a2a85",
              "subnet-090c28aac9e0c356a",
              "subnet-0dd2fe595e3108f88"
            ],
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0e1be07f9a122880d",
            "description": "Allow only inbound ssh traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1be07f9a122880d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test1-bastion",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eliza",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eliza",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-00016e6bb2a66eb23",
            "description": "Allow inbound eliza traffic and mgmt ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00016e6bb2a66eb23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5173,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5173
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1be07f9a122880d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test1-eliza",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test1-eliza"
            },
            "tags_all": {
              "Name": "test1-eliza"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:vpc-endpoint/vpce-02530106b802ce6a0",
            "dns_entry": [
              {
                "dns_name": "vpce-02530106b802ce6a0-3fu0yrxj.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02530106b802ce6a0-3fu0yrxj-eu-central-1b.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02530106b802ce6a0-3fu0yrxj-eu-central-1a.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02530106b802ce6a0-3fu0yrxj-eu-central-1c.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z042032431J0759D1HDYL"
              },
              {
                "dns_name": "ec2.eu-central-1.api.aws",
                "hosted_zone_id": "Z02660651JGZLGN6UYIGV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02530106b802ce6a0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-063e28ba782d2294b",
              "eni-064907a81dc6f5fc6",
              "eni-0864a0a449ae7d53f"
            ],
            "owner_id": "686255952373",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e40179cf1a1bf7aa"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.17.33",
                "subnet_id": "subnet-020e5da3889ef085e"
              },
              {
                "ipv4": "10.0.60.130",
                "subnet_id": "subnet-0f4351894c7a3e8cf"
              },
              {
                "ipv4": "10.0.93.162",
                "subnet_id": "subnet-0deb48d273e1a6514"
              }
            ],
            "subnet_ids": [
              "subnet-020e5da3889ef085e",
              "subnet-0deb48d273e1a6514",
              "subnet-0f4351894c7a3e8cf"
            ],
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-ec2-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1-ec2-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.endpoints.data.aws_region.current",
            "module.security.aws_security_group.endpoint_sg",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:vpc-endpoint/vpce-0bbcd50a6383680f6",
            "dns_entry": [
              {
                "dns_name": "vpce-0bbcd50a6383680f6-n8f4ob44.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0bbcd50a6383680f6-n8f4ob44-eu-central-1b.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0bbcd50a6383680f6-n8f4ob44-eu-central-1c.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0bbcd50a6383680f6-n8f4ob44-eu-central-1a.kms.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "kms.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z04208543OZ8CH4RSRROO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0bbcd50a6383680f6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00c7ef68bc6d7c9a3",
              "eni-011e255faa83e69d2",
              "eni-0737aefe3833ab2bd"
            ],
            "owner_id": "686255952373",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e40179cf1a1bf7aa"
            ],
            "service_name": "com.amazonaws.eu-central-1.kms",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.50.85",
                "subnet_id": "subnet-0f4351894c7a3e8cf"
              },
              {
                "ipv4": "10.0.77.43",
                "subnet_id": "subnet-0deb48d273e1a6514"
              },
              {
                "ipv4": "10.0.9.33",
                "subnet_id": "subnet-020e5da3889ef085e"
              }
            ],
            "subnet_ids": [
              "subnet-020e5da3889ef085e",
              "subnet-0deb48d273e1a6514",
              "subnet-0f4351894c7a3e8cf"
            ],
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-kms-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1-kms-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.endpoints.data.aws_region.current",
            "module.security.aws_security_group.endpoint_sg",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:vpc-endpoint/vpce-023fd0b0379c10dcd",
            "dns_entry": [
              {
                "dns_name": "vpce-023fd0b0379c10dcd-kyavqjao.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-023fd0b0379c10dcd-kyavqjao-eu-central-1b.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-023fd0b0379c10dcd-kyavqjao-eu-central-1c.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-023fd0b0379c10dcd-kyavqjao-eu-central-1a.secretsmanager.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "secretsmanager.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z04206312U1XN1EWC5LKC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-023fd0b0379c10dcd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07676b403daaa8aa3",
              "eni-08866cdc80a27df12",
              "eni-09fc979c5e0af7130"
            ],
            "owner_id": "686255952373",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e40179cf1a1bf7aa"
            ],
            "service_name": "com.amazonaws.eu-central-1.secretsmanager",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.116",
                "subnet_id": "subnet-020e5da3889ef085e"
              },
              {
                "ipv4": "10.0.50.66",
                "subnet_id": "subnet-0f4351894c7a3e8cf"
              },
              {
                "ipv4": "10.0.90.245",
                "subnet_id": "subnet-0deb48d273e1a6514"
              }
            ],
            "subnet_ids": [
              "subnet-020e5da3889ef085e",
              "subnet-0deb48d273e1a6514",
              "subnet-0f4351894c7a3e8cf"
            ],
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-secretsmanager-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1-secretsmanager-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.endpoints.data.aws_region.current",
            "module.security.aws_security_group.endpoint_sg",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:vpc-endpoint/vpce-02a439b42f1f44d29",
            "dns_entry": [
              {
                "dns_name": "vpce-02a439b42f1f44d29-ma6tm6x9.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02a439b42f1f44d29-ma6tm6x9-eu-central-1c.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02a439b42f1f44d29-ma6tm6x9-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02a439b42f1f44d29-ma6tm6x9-eu-central-1b.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssm.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z07197061PLOWKV6ZOO67"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02a439b42f1f44d29",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-076341bb882ed3ede",
              "eni-0d3f3ae0142b199fd",
              "eni-0fb7df4f6c1bf68d2"
            ],
            "owner_id": "686255952373",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0e40179cf1a1bf7aa"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.29.50",
                "subnet_id": "subnet-020e5da3889ef085e"
              },
              {
                "ipv4": "10.0.34.39",
                "subnet_id": "subnet-0f4351894c7a3e8cf"
              },
              {
                "ipv4": "10.0.67.40",
                "subnet_id": "subnet-0deb48d273e1a6514"
              }
            ],
            "subnet_ids": [
              "subnet-020e5da3889ef085e",
              "subnet-0deb48d273e1a6514",
              "subnet-0f4351894c7a3e8cf"
            ],
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-ssm-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1-ssm-endpoint",
              "Product": "prism1",
              "Terraform": "UsePrism/eliza-infra"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.endpoints.data.aws_region.current",
            "module.security.aws_security_group.endpoint_sg",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0515086ce1ec3fcbd",
            "description": "Allow inbound nginx traffic and mgmt ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0515086ce1ec3fcbd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1be07f9a122880d"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1be07f9a122880d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "test1-nginx",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test1-nginx-80a-443a-22b-0x"
            },
            "tags_all": {
              "Name": "test1-nginx-80a-443a-22b-0x"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nginx.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:loadbalancer/app/test1-nginx/ebb353458c346115",
            "arn_suffix": "app/test1-nginx/ebb353458c346115",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test1-nginx-257624653.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:loadbalancer/app/test1-nginx/ebb353458c346115",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test1-nginx",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0515086ce1ec3fcbd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052d1357f212a2a85"
              },
              {
                "subnet_id": "subnet-090c28aac9e0c356a"
              },
              {
                "subnet_id": "subnet-0dd2fe595e3108f88"
              }
            ],
            "subnets": [
              "subnet-052d1357f212a2a85",
              "subnet-090c28aac9e0c356a",
              "subnet-0dd2fe595e3108f88"
            ],
            "tags": {
              "Environment": "test1",
              "Name": "test1-nginx",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "test1-nginx",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.nginx.aws_security_group.nginx",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:listener/app/test1-nginx/ebb353458c346115/211d7512dbf95c3b",
            "certificate_arn": "arn:aws:acm:eu-central-1:686255952373:certificate/773fbb00-6ab4-42be-b5e8-1c37b836c708",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:targetgroup/test1-nginx/17515adbd5fbd3e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:listener/app/test1-nginx/ebb353458c346115/211d7512dbf95c3b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:loadbalancer/app/test1-nginx/ebb353458c346115",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "test1",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "tags_all": {
              "Environment": "test1",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.nginx.aws_security_group.nginx",
            "module.nginx.data.aws_route53_zone.zone",
            "module.nginx.module.acm.aws_acm_certificate.this",
            "module.nginx.module.acm.aws_acm_certificate_validation.this",
            "module.nginx.module.acm.aws_route53_record.validation",
            "module.nginx.module.alb.aws_lb.this",
            "module.nginx.module.alb.aws_lb_target_group.main",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nginx.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:targetgroup/test1-nginx/17515adbd5fbd3e4",
            "arn_suffix": "targetgroup/test1-nginx/17515adbd5fbd3e4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:686255952373:targetgroup/test1-nginx/17515adbd5fbd3e4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:686255952373:loadbalancer/app/test1-nginx/ebb353458c346115"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test1-nginx",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "test1",
              "Name": "test1-nginx",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "test1-nginx",
              "Role": "nginx",
              "Terraform": "Use-Prism/eliza-infra"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.provisioner",
      "mode": "data",
      "type": "aws_subnet",
      "name": "first_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-020e5da3889ef085e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 8181,
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020e5da3889ef085e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          }
        }
      ]
    },
    {
      "module": "module.provisioner",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_outbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0cd35c7b91fcae4c1",
            "description": "Allow all outbound traffic for Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd35c7b91fcae4c1",
            "ingress": [],
            "name": "test1-provisioner-outbound",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test1",
              "Name": "test1-provisioner-outbound"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "test1-provisioner-outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.provisioner.data.aws_subnet.first_subnet",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds_postgres",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-09b224c564bb9999e",
            "description": "Security Group that allows internal aws services to hit RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b224c564bb9999e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Bastion to connect to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1be07f9a122880d"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow Nomad cluster to connect to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d031fc5c7236dfba"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Self-referencing",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "test1-eliza-sg",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test1-eliza-sg"
            },
            "tags_all": {
              "Name": "test1-eliza-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.bastion",
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consul",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0f71987164a8f60a7",
            "description": "All required ports for Consul are allowed for members of the security group",
            "egress": [],
            "id": "sg-0f71987164a8f60a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8300
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 21000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 21255
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8302
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8301,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8302
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8500
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8600
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 8600
              }
            ],
            "name": "test1-consul",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0e40179cf1a1bf7aa",
            "description": "Allow inbound traffic to self referencing group",
            "egress": [],
            "id": "sg-0e40179cf1a1bf7aa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "test1-endpoint",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test1",
              "Name": "test1-endpoint",
              "Terraform": "UsePrism/eliza-infra"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "test1-endpoint",
              "Terraform": "UsePrism/eliza-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nomad",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0d031fc5c7236dfba",
            "description": "All required ports for nomad are allowed for members of the security group",
            "egress": [],
            "id": "sg-0d031fc5c7236dfba",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 20000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 32000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 20000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 32000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 4646
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4647,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 4647
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4648,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 4648
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4648,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 4648
              }
            ],
            "name": "test1-nomad",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0878d9a5236afd24b",
            "description": "All required ports for vault are allowed for members of the security group",
            "egress": [],
            "id": "sg-0878d9a5236afd24b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8201,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8201
              }
            ],
            "name": "test1-vault",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_dns_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-3380269560",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f71987164a8f60a7",
            "security_group_rule_id": "sgr-03f88ef4ede4b6790",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_dns_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8600,
            "id": "sgrule-1831170583",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0f71987164a8f60a7",
            "security_group_rule_id": "sgr-07b07adad82520e8e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8600,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_http_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8500,
            "id": "sgrule-1302776466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f71987164a8f60a7",
            "security_group_rule_id": "sgr-0ea78f75838fd093b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_rpc_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8300,
            "id": "sgrule-1882300466",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f71987164a8f60a7",
            "security_group_rule_id": "sgr-0c5d0df9e284b0a68",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8300,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_serf_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8300,
            "id": "sgrule-1862227308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f71987164a8f60a7",
            "security_group_rule_id": "sgr-05ab1b90d63b3dc1f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_serf_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8301,
            "id": "sgrule-582444578",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0f71987164a8f60a7",
            "security_group_rule_id": "sgr-03961867523df300c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8302,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_sidecar_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 21000,
            "id": "sgrule-90831607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f71987164a8f60a7",
            "security_group_rule_id": "sgr-0ec47f4e68327b3a7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 21255,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.consul",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_dynamic_ports_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 20000,
            "id": "sgrule-2596677764",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d031fc5c7236dfba",
            "security_group_rule_id": "sgr-06f723f84bb78eb52",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_dynamic_ports_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 20000,
            "id": "sgrule-1050250091",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0d031fc5c7236dfba",
            "security_group_rule_id": "sgr-05e9c0aeb56048188",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_http_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4646,
            "id": "sgrule-3379945533",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d031fc5c7236dfba",
            "security_group_rule_id": "sgr-0edfd46b2558df325",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4646,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_rpc_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4647,
            "id": "sgrule-3021120521",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d031fc5c7236dfba",
            "security_group_rule_id": "sgr-0be0901de950ac814",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4647,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_serf_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4648,
            "id": "sgrule-1083134950",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d031fc5c7236dfba",
            "security_group_rule_id": "sgr-07f5661e62ce75f0b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4648,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_serf_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 4648,
            "id": "sgrule-3838898185",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0d031fc5c7236dfba",
            "security_group_rule_id": "sgr-0bb92d0c27d929eb7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4648,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.nomad",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_client_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8200,
            "id": "sgrule-4158309909",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0878d9a5236afd24b",
            "security_group_rule_id": "sgr-09ce1ff866f402dc0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8200,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.vault",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vault_server_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8201,
            "id": "sgrule-1292016245",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0878d9a5236afd24b",
            "security_group_rule_id": "sgr-0466e229ccd509a27",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8201,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.vault",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0064a0ddc419ebfeb",
            "arn": "arn:aws:ec2:eu-central-1:686255952373:elastic-ip/eipalloc-0064a0ddc419ebfeb",
            "association_id": "eipassoc-058b9adac5631fe96",
            "domain": "vpc",
            "id": "eipalloc-0064a0ddc419ebfeb",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0e8f891f417e5949d",
            "private_dns": "ip-10-0-134-21.eu-central-1.compute.internal",
            "private_ip": "10.0.134.21",
            "public_dns": "ec2-3-127-34-255.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.34.255",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:network-acl/acl-072110a0785cac6a2",
            "default_network_acl_id": "acl-072110a0785cac6a2",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-072110a0785cac6a2",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "686255952373",
            "subnet_ids": [
              "subnet-020e5da3889ef085e",
              "subnet-052d1357f212a2a85",
              "subnet-090c28aac9e0c356a",
              "subnet-0dd2fe595e3108f88",
              "subnet-0deb48d273e1a6514",
              "subnet-0f4351894c7a3e8cf"
            ],
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:route-table/rtb-03e39df41618d45cb",
            "default_route_table_id": "rtb-03e39df41618d45cb",
            "id": "rtb-03e39df41618d45cb",
            "owner_id": "686255952373",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:security-group/sg-0e9df63e33421e263",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e9df63e33421e263",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "686255952373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:internet-gateway/igw-0b5243b9de28ed242",
            "id": "igw-0b5243b9de28ed242",
            "owner_id": "686255952373",
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0064a0ddc419ebfeb",
            "association_id": "eipassoc-058b9adac5631fe96",
            "connectivity_type": "public",
            "id": "nat-08d2ca01c99b29da0",
            "network_interface_id": "eni-0e8f891f417e5949d",
            "private_ip": "10.0.134.21",
            "public_ip": "3.127.34.255",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-090c28aac9e0c356a",
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d4a256b664bc0621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08d2ca01c99b29da0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d4a256b664bc062",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b5243b9de28ed242",
            "id": "r-rtb-0ddae835638c0391f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ddae835638c0391f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:route-table/rtb-05d4a256b664bc062",
            "id": "rtb-05d4a256b664bc062",
            "owner_id": "686255952373",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d2ca01c99b29da0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:route-table/rtb-0ddae835638c0391f",
            "id": "rtb-0ddae835638c0391f",
            "owner_id": "686255952373",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5243b9de28ed242",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c49a2c28c9e2473c",
            "route_table_id": "rtb-05d4a256b664bc062",
            "subnet_id": "subnet-020e5da3889ef085e"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016b14652ff099398",
            "route_table_id": "rtb-05d4a256b664bc062",
            "subnet_id": "subnet-0f4351894c7a3e8cf"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01edb56a3b9bfcba3",
            "route_table_id": "rtb-05d4a256b664bc062",
            "subnet_id": "subnet-0deb48d273e1a6514"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b079381a71a988bf",
            "route_table_id": "rtb-0ddae835638c0391f",
            "subnet_id": "subnet-090c28aac9e0c356a"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0d3dc73975d21f8",
            "route_table_id": "rtb-0ddae835638c0391f",
            "subnet_id": "subnet-0dd2fe595e3108f88"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a774eb8b3ddf14e3",
            "route_table_id": "rtb-0ddae835638c0391f",
            "subnet_id": "subnet-052d1357f212a2a85"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-020e5da3889ef085e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020e5da3889ef085e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-0f4351894c7a3e8cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4351894c7a3e8cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-0deb48d273e1a6514",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0deb48d273e1a6514",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-090c28aac9e0c356a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090c28aac9e0c356a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-0dd2fe595e3108f88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd2fe595e3108f88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:subnet/subnet-052d1357f212a2a85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052d1357f212a2a85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "686255952373",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-06fd88194aacfa1a1"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:686255952373:vpc/vpc-06fd88194aacfa1a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-072110a0785cac6a2",
            "default_route_table_id": "rtb-03e39df41618d45cb",
            "default_security_group_id": "sg-0e9df63e33421e263",
            "dhcp_options_id": "dopt-04b7f95176d1a3bc1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fd88194aacfa1a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e39df41618d45cb",
            "owner_id": "686255952373",
            "tags": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "test1",
              "Name": "prism1-test1",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}